# OOP

./: .gitignore  README.md
1/: CMakeLists.txt  brackets_check.cpp  brackets_check.h  task1.cpp  tests1.cpp
2/: CMakeLists.txt  main.cpp
2/include/: eleven.h  help.h
2/src/: eleven.cpp  help.cpp
2/test/: tests.cpp
3/: CMakeLists.txt  main.cpp  test.txt
3/include/: array.h  figure.h  generator.h  hexagon.h  octagon.h  point.h  triangle.h
3/src/: array.cpp  figure.cpp  generator.cpp  hexagon.cpp  octagon.cpp  point.cpp  triangle.cpp
3/test/: generate.cpp  test.cpp
4/: CMakeLists.txt  main (2).cpp  main.cpp
4/include/: array.h  figure-array.h  figure.h  hexagon.h  octagon (2).h  octagon.h  point.h  triangle.h
4/src/: arraySRC.h  figure-array.h  figureSRC.h  generatorSRC.h  hexagonSRC.h  octagonSRC.h  pointSRC.h  triangleSRC.h
4/test/: test.cpp
5/: CMakeLists.txt  allocator.h  main.cpp
5/include/: allocator.h  list.h  node.h
5/test/: test.cpp
6/: CMakeLists.txt  main.cpp
6/include/: battlefield.h  bear.h  factory.h  npc.h  orc.h  squirrel.h
6/src/: battlefield.cpp  bear.cpp  factory.cpp  npc.cpp  orc.cpp  squirell.cpp
6/test/: tests.cpp
7/: CMakeLists.txt  main.cpp
7/include/: battlefield.h  bear.h  npc.h  orc.h  squirrel.h
7/log/: cleaner.sh
7/src/: battlefield.cpp  bear.cpp  npc.cpp  orc.cpp  squirell.cpp
7/test/: tests.cpp
